tests/errors/literals/suffix-unknown.fn
---
Description: Literal with a suffix that has not been declared anywhere
Expected: compile error
---

type Program
{
    fn Main -> i32
    {
        var v = 10xyz
        return 0
    }
}
